# yongcai-booth

./: .editorconfig  .gitignore  ACTUAL_PROGRESS_REPORT.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  CODE_IMPLEMENTATION_PROGRESS.md  COMPREHENSIVE_FINAL_REPORT.md  CONTINUE_FROM_HERE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FINAL_EXECUTION_REPORT.md  FINAL_OPTIMIZATION_SUMMARY.md  HONEST_FINAL_SUMMARY.md  LICENSE  Makefile  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  PROTOCOL.md  README.md  REALTIME_PROGRESS.md  ROADMAP.md  SECURITY.md  SERVICE_REFACTOR_REPORT.md  TECH_STACK.md  TODO.md  package-lock.json
D-Booth/backend/: .dockerignore  .env.example  .gitignore  CORE_OPTIMIZATION_REPORT.md  DEVELOPMENT_PROGRESS.md  Dockerfile  FINAL_SUMMARY.md  MODELS_OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_ROUND4.md  PHASE9_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  REFACTORING_SUMMARY.txt  SECURITY_FIX_P0_TENANT_ISOLATION.md  STEP1_SCHEMAS_COMPLETE.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.ps1  start.sh
D-Booth/backend/.github/workflows/: ci.yml
D-Booth/backend/alembic/: env.py
D-Booth/backend/alembic/versions/: 001_initial.py  002_add_indexes.py  003_add_missing_indexes.py  004_add_booths.py  005_add_triggers_webhooks_and_green_screen.py  006_optimize_models_soft_delete_indexes.py  007_update_foreign_key_cascades.py  008_align_green_screen_persistence.py  009_add_print_job_template_id.py
D-Booth/backend/app/: celery_app.py  main.py
D-Booth/backend/app/api/: deps.py
D-Booth/backend/app/core/: __init__.py  cache.py  config.py  database.py  logging.py  (+6 more)
D-Booth/backend/docs/: INDEX_OPTIMIZATION_SUMMARY.md  REPOSITORY_OPTIMIZATION.md
D-Booth/backend/scripts/: __init__.py  pytest_annotation.py
D-Booth/backend/tests/: conftest.py  test_ai_service.py  test_auth.py  test_beauty_access.py  test_booth_access.py  test_camera_capture.py  test_gopro_media.py  test_green_screen.py  test_main.py  test_media_security.py  test_photo_sessions.py  test_photo_tasks.py  test_print_template_flow.py  test_printers.py  test_props.py  test_pytest_annotation.py  test_rate_limit.py  test_refactored_services.py  test_repositories.py  test_runtime_regressions.py  test_share_expiry.py  test_share_settings.py  test_signatures.py  test_storage_email_fail_closed.py  test_stripe_webhook.py  test_subscription_access.py  test_subscription_cancel.py  test_subscription_quotas.py  test_survey_disclaimer_config.py  test_sync_access.py  test_teams.py  test_templates_api.py  test_tenant_isolation.py  test_triggers_security.py  test_virtual_attendant_access.py  test_webhook_access.py
(+337 files in other folders)
